@startuml
' skinparam
skinparam monochrome true
skinparam shadowing false
skinparam defaultFontName "Arial"
skinparam defaultFontSize 12
skinparam roundCorner 5
skinparam stereotypeCBackgroundColor White
skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
}

' interfaces
interface Transport {
    + Connect() ([]byte, error)
    + Disconnect() ([]byte, error)
    + IsConnected() bool
    + Send(pdu []byte) ([][]byte, error)
    + Receive(src []byte) ([][]byte, error)
    + Read() ([]byte, error)
}

interface BaseInterface {
    + GetClassID() uint16
    + GetInstanceID() ObisCode
    + GetAttribute(attributeID byte) (interface{}, error)
    + SetAttribute(attributeID byte, value interface{}) error
    + Invoke(methodID byte, parameters []interface{}) (interface{}, error)
}

' classes
class Application {
    - transport: Transport
    + HandleAPDU(src []byte) ([]byte, error)
}

class HDLCConnection {
    + Connect() ([]byte, error)
    + Disconnect() ([]byte, error)
    + IsConnected() bool
    + Send(pdu []byte) ([][]byte, error)
    + Receive(src []byte) ([][]byte, error)
    + Read() ([]byte, error)
}

class "wrapper.Connection" as WrapperConnection {
    + Connect() ([]byte, error)
    + Disconnect() ([]byte, error)
    + IsConnected() bool
    + Send(pdu []byte) ([][]byte, error)
    + Receive(src []byte) ([][]byte, error)
    + Read() ([]byte, error)
}

class BaseImpl {
    + GetAttribute(attributeID byte) (interface{}, error)
    + SetAttribute(attributeID byte, value interface{}) error
    + Invoke(methodID byte, parameters []interface{}) (interface{}, error)
}

class Data {}
class Register {}

' relationships
Application o-- Transport
Transport <|.. HDLCConnection
Transport <|.. WrapperConnection

Application o-- BaseInterface
BaseInterface <|.. BaseImpl
BaseImpl <|-- Data
BaseImpl <|-- Register

@enduml
